--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,10 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/dev/db-derby-10.12.1.1-bin/lib/derby.jar"/>
+	<classpathentry kind="lib" path="C:/dev/db-derby-10.12.1.1-bin/lib/derbyoptionaltools.jar"/>
+	<classpathentry kind="lib" path="C:/dev/db-derby-10.12.1.1-bin/lib/derbynet.jar"/>
+	<classpathentry kind="lib" path="C:/dev/db-derby-10.12.1.1-bin/lib/derbytools.jar"/>
+	<classpathentry kind="lib" path="C:/dev/db-derby-10.12.1.1-bin/lib/derbyclient.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
