Can connect to DB and write to DB from web form

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,15 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+  	<servlet-name>SubmitComment</servlet-name>
+  	<servlet-class>se.webdev.ju15.Controller.Controller</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>SubmitComment</servlet-name>
+  	<url-pattern>/Submit</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
