--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -20,7 +20,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Controller</servlet-name>
-		<url-pattern>/index</url-pattern>
+		<url-pattern>/submit</url-pattern>
 	</servlet-mapping>
 
 </web-app>
