--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,14 +13,35 @@
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
 
-		
-		<servlet>
+
+	<servlet>
 		<servlet-name>Controller</servlet-name>
 		<servlet-class>se.webdev.ju15.Controller.Controller</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Controller</servlet-name>
 		<url-pattern>/submit</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>ShowComment</servlet-name>
+		<servlet-class>se.webdev.ju15.Controller.Show</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>ShowComment</servlet-name>
+		<url-pattern>/show</url-pattern>
+	</servlet-mapping>
+
+
+	<servlet>
+		<servlet-name>VoteController</servlet-name>
+		<servlet-class>se.webdev.ju15.Controller.VoteController</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>VoteController</servlet-name>
+		<url-pattern>/vote</url-pattern>
 	</servlet-mapping>
 
 </web-app>
