--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,41 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>Projektuppgift_webdev</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
-  
-  <servlet>
-    <servlet-name>SubmitComment</servlet-name>
-    <servlet-class>se.webdev.ju15.Controller.Controller</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>SubmitComment</servlet-name>
-    <url-pattern>/submit</url-pattern>
-  </servlet-mapping>
-  
-  <servlet>
-    <servlet-name>ShowComment</servlet-name>
-    <servlet-class>se.webdev.ju15.Controller.Show</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ShowComment</servlet-name>
-    <url-pattern>/show</url-pattern>
-  </servlet-mapping>
-  
-  <servlet>
-    <servlet-name>GetMessage</servlet-name>
-    <servlet-class>se.webdev.ju15.Controller.GetMessage</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>GetMessage</servlet-name>
-    <url-pattern>/message</url-pattern>
-  </servlet-mapping>
-  
- 
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	id="WebApp_ID" version="3.1">
+	<display-name>Projektuppgift_webdev</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
+
+
+	<servlet>
+		<servlet-name>Controller</servlet-name>
+		<servlet-class>se.webdev.ju15.Controller.Controller</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Controller</servlet-name>
+		<url-pattern>/submit</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>ShowComment</servlet-name>
+		<servlet-class>se.webdev.ju15.Controller.Show</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>ShowComment</servlet-name>
+		<url-pattern>/show</url-pattern>
+	</servlet-mapping>
+
+
+	<servlet>
+		<servlet-name>VoteController</servlet-name>
+		<servlet-class>se.webdev.ju15.Controller.VoteController</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>VoteController</servlet-name>
+		<url-pattern>/vote</url-pattern>
+	</servlet-mapping>
+
 </web-app>
