--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -43,5 +43,16 @@
 		<servlet-name>VoteController</servlet-name>
 		<url-pattern>/vote</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>GetMessage</servlet-name>
+		<servlet-class>se.webdev.ju15.Controller.GetMessage</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>GetMessage</servlet-name>
+		<url-pattern>/message/*</url-pattern>
+	</servlet-mapping>
+	
 
 </web-app>
